--- a/Tic.html
+++ b/Tic.html
@@ -7,7 +7,10 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    <div id="grid"></div>
+    <div id="main">
+            <div id="grid"></div>
+    </div>
+   
     <script src="script.js"></script>
 </body>
 </html>
