working on start button

--- a/Tic.html
+++ b/Tic.html
@@ -7,8 +7,18 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
+    
     <div id="main">
+        <h1>Tic Tac Toe</h1>
             <div id="grid"></div>
+            <div id="controls">
+                <input type="text" id="player1" placeholder="p1">
+                <input type="text" id="player2" placeholder="p2">
+                <button id="start">Start</button>
+                <button id="restart">Restart</button>
+            </div>
+            <div id="message"></div>
+            <div id="result"></div>
     </div>
    
     <script src="script.js"></script>
