fixed placeholder in html to a questi, fixed styling to nontransparent, added game functionality

--- a/Tic.html
+++ b/Tic.html
@@ -12,8 +12,8 @@
         <h1>Tic Tac Toe</h1>
             <div id="grid"></div>
             <div id="controls">
-                <input type="text" id="player1" placeholder="p1">
-                <input type="text" id="player2" placeholder="p2">
+                <input type="text" id="player1" placeholder="What's your name?">
+                <input type="text" id="player2" placeholder="What's your name?">
                 <button id="start">Start</button>
                 <button id="restart">Restart</button>
             </div>
